2008-06-29 Jim Garlick <garlick@llnl.gov>

	* src/httppower.c, src/Makefile.am, config/ac_readline.m4,
	configure.ac : Drop readline dependency.

	* test/dli.c, test/t42, test/t43 : Test for DLI LPC device.

2008-06-28 Jim Garlick <garlick@llnl.gov>

	* src/plmpower.c : Tighten up PLM synchronization and clean up:
	- Send X10 commands 3 times (override with -x option)
	- Handle PLM-not-ready NAK properly.
	- Timeout/retry (1s) insteon packets (override timeout with -t option).
	- Added ping command.
	- Rename --testmode,-t to --testmode,-T.
	- Drop monitor command.

	* etc/plmpower.dev : Remove delays.

2008-06-27 Jim Garlick <garlick@llnl.gov>

	* src/plmpower.c : Correct serial port initialization.

	* etc/plmpower.dev : Add 1 sec delay between commands.

2008-06-24 Jim Garlick <garlick@llnl.gov>

	* src/plmpower.c : Added -t option.

	* test/t41 : Test for above.

2008-06-23 Jim Garlick <garlick@llnl.gov>

	* htdocs/supported.html : Add hp3488, ics8064, plmpower, swpdu.

	* etc/ipmipower.dev : Change status scripts to not expect local
	command echo since we turned that off, and to expect \r\n rather
	than $ when setting plug state.

	* src/xregex.c, test/tregex.c : Drop NOT_BOL flag from xregexec,
	so ^ is allowed but $ still isn't.

	* etc/plmpower.dev : Add PLM reset to login script, in case
	someone ran 'monitor' and left PLM in monitor mode.

	* src/plmpower.c : Add 'monitor' command.

2008-06-22 Jim Garlick <garlick@llnl.gov>

	* src/plmpower.c, etc/plmpower.dev : Add support for SmartLabs 
	PLM 2412S controller, controlling Insteon and X10 devices.

2008-06-21 Jim Garlick <garlick@llnl.gov>

	* powerman.spec: Test %{?fedora} not %{?fc9}, %{?chaos} not %{?ch4}.
	Add test for %{?rhel}.

	* etc/ics8064.dev, etc/hp3488.dev : New gpib-utils devices.

	* tests/t37-t40, tests/gpib.c : Tests for above.

	* test/t32.exp : Added missing file.
	
	* test/icebox.c : Fix incorrect plug array declaration.

2008-06-19 Jim Garlick <garlick@llnl.gov>
