@@ -42,7 +42,9 @@
 #endif
 #include <stdio.h>
 #include <libgen.h>
+#if HAVE_GETOPT_H
 #include <getopt.h>
+#endif
 #include <string.h>
 #include <stdlib.h>
 #include <unistd.h>
@@ -184,6 +186,8 @@ static unsigned long    x10_attempts = 3;
 static int              insteon_tmout = 1000; /* (msec) */
 
 #define OPTIONS "d:Tx:t:"
+#if HAVE_GETOPT_LONG
+#define GETOPT(ac,av,opt,lopt) getopt_long(ac,av,opt,lopt,NULL)
 static struct option longopts[] = {
     { "device",         required_argument, 0, 'd' },
     { "testmode",       no_argument,       0, 'T' },
@@ -191,6 +195,9 @@ static struct option longopts[] = {
     { "timeout",        required_argument, 0, 't' },
     {0,0,0,0},
 };
+#else
+#define GETOPT(ac,av,opt,lopt) getopt(ac,av,opt)
+#endif
 
 int
 main(int argc, char *argv[])
@@ -201,7 +208,7 @@ main(int argc, char *argv[])
 
     err_init(basename(argv[0]));
 
-    while ((c = getopt_long(argc, argv, OPTIONS, longopts, NULL)) != EOF) {
+    while ((c = GETOPT(argc, argv, OPTIONS, longopts)) != EOF) {
         switch (c) {
             case 'd':   /* --device */
                 device = optarg;
